# sfbart

./: Cargo.toml  README.md
src/: main.rs
src/client/: mod.rs
src/client/advisories/: count.rs  mod.rs
src/client/advisories/bsa/: mod.rs  type.rs
src/client/advisories/elev/: mod.rs
src/client/apis/: mod.rs
src/client/apis/advisories/: count.rs
src/client/apis/advisories/bsa/: mod.rs  type.rs
src/client/apis/advisories/elev/: mod.rs  type.rs
src/client/apis/real_time_estimates/: etd.rs
src/client/apis/real_time_estimates/etd/: minutes.rs  mod.rs
src/client/apis/route_information/: mod.rs  routeinfo.rs  routes.rs
src/client/apis/schedule_information/: arrive.rs  mod.rs
src/client/apis/station_information/: mod.rs  stnaccess.rs  stninfo.rs  stns.rs
src/client/constants/: color.rs  datetime.rs  direction.rs  fare_type.rs  mod.rs  station.rs
src/client/real_time_estimates/: etd.rs  mod.rs
src/client/serde_helpers/: mod.rs
src/client/version_information/: version.rs
