[package]
name = "sfbart"
description = "Client and real-time service for BART APIs"
version = "0.1.0"
authors = ["Dylan Frankland <dylan@frankland.io>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/instrumentisto/juniper/", branch = "async-await-subscriptions", features = ["async"] }
warp = { git = "https://github.com/seanmonstar/warp", rev = "5c269562a823c5340f3dfc14bdd11af592c03dea" }
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.47"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
anyhow = "1.0.17"
chrono = { version = "0.4.9", features = ["serde"] }
url = { version = "2.1.0", features = ["serde"] }
